...
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textview_marginstart"
                android:layout_marginBottom="81dp"
                android:text="@string/app_name"
                app:layout_constraintBottom_toTopOf="@+id/goToSecondActivity"
                app:layout_constraintStart_toStartOf="@+id/goToSecondActivity"
                android:background="@color/blue" />

            <Button
                android:id="@+id/goToSecondActivity"
                android:layout_width="wrap_content"
...
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goToSecondActivity" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:onClick="changeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
