...
    <string name="example_user_first_name">Example</string>
    <string name="example_user_last_name">Person</string>
    <string name="example_user_photo">http://placekitten.com/200/300</string>
    <string name="second_activity">Second Activity</string>
    <string name="some_text">Some text</string>
    <string name="jk_text_view">JK I want the text to be this</string>
    <string name="jk_button_text">JK I want the Button to have this text</string>
    <string name="button3">Button3</string>
    <string name="go_to_gravity_example">Go to Gravity Example</string>
    <string name="go_to_constraint_layout_example">Go to Constraint Layout Example</string>
    <string name="sign_out">Sign Out</string>
    <string name="a_picture_of_the_users_photo">A picture of the users photo</string>
</resources>
...
