<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow"
    android:padding="@dimen/linear_layout_padding"
    tools:context=".FragmentDataPassingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstNumber"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

        <EditText
            android:id="@+id/secondNumber"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>

    </LinearLayout>

    <Button
        android:id="@+id/sendDataToFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendDataToFragment"
        android:text="@string/send_data_to_fragment"/>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/linear_layout_padding"/>

</LinearLayout>