<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentTransactionExampleActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addFragmentA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a"
            android:onClick="addFragmentA"/>

        <Button
            android:id="@+id/removeFragmentA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_a"
            android:onClick="removeFragmentA"/>

        <Button
            android:id="@+id/addFragmentB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_b"
            android:onClick="addFragmentB"/>

        <Button
            android:id="@+id/removeFragmentB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_b"
            android:onClick="removeFragmentB"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/replaceWithFragmentA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replace_by_a"
            android:onClick="replaceByFragmentA"/>

        <Button
            android:id="@+id/replaceWithFragmentB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replace_by_b"
            android:onClick="replaceByFragmentB"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/attachFragmentB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attach_b"
            android:onClick="attachFragmentB"/>

        <Button
            android:id="@+id/detachFragmentB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detach_b"
            android:onClick="detachFragmentB"/>

        <Button
            android:id="@+id/showFragmentA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_a"
            android:onClick="showFragmentA"/>

        <Button
            android:id="@+id/hideFragmentA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_a"
            android:onClick="hideFragmentA"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dummyBackButtonClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="dummyBackButtonClick"/>

        <Button
            android:id="@+id/popAddAInclusive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_add_a_inclusive"
            android:onClick="popAddFragAInclusiveTransaction"/>

        <Button
            android:id="@+id/popAddBExclusive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_add_b"
            android:onClick="popAddFragBTransaction"/>

    </LinearLayout>
    
    <FrameLayout
        android:id="@+id/container"
        android:layout_margin="@dimen/margin_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>