<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/red"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_b"
        android:layout_margin="@dimen/ten"
        android:textColor="@android:color/white"/>
    
    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/twenty"
        android:layout_marginBottom="@dimen/twenty"
        android:text="@string/result"
        android:textSize="@dimen/large_font_size"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        />

    

</LinearLayout>